chore: deep code optimization — unused imports, var, .formatted(), .toList()
Unused imports removed: 9 files cleaned (ConditionalOnProperty, Collectors,
Method, ArgumentCaptor, Map, Instant, DryRunContext, GuardrailOutputResult)

Java 21 features applied:
- var: GuardrailPipeline, ToolRegistry, AgentKitExceptionHandler
- String.formatted(): DefaultOrchestratorEngine, SemanticRoutingService,
  EvalAdminController, ChatCommand (replacing String.format)
- .toList(): ToolRegistry, InMemoryVectorStore, SkillLinter
  (replacing .collect(Collectors.toList()))

Simplified:
- DefaultOrchestratorEngine: extracted persistChatMessage() helper,
  simplified dry-run context extraction
- PromptBuilder: forEach lambdas replacing for-loops
- SkillMdParser: pattern matching ternary for getMap()
- InMemoryVectorStore: simplified tokenize()

Verified: agent-core compiles clean, zero Spring imports in core,
no test files reference deleted types, zero unused imports remaining.

https://claude.ai/code/session_012kEHWo1XE4pHGYbSMT6tLZ